# tarot-canvas

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: flatpak-build.yml  release.yml
packaging/: land.arcana.TarotCanvas.appdata.xml  land.arcana.TarotCanvas.desktop  land.arcana.TarotCanvas.flathub.yml  land.arcana.TarotCanvas.yml  python-sources.json  python3-modules.yaml  tarot-canvas-launcher.sh
tarot_canvas/: __init__.py  _version.py  main.py
tarot_canvas/models/: __init__.py  card.py  deck.py  deck_manager.py  esoterica.py  reference_deck.py
tarot_canvas/ui/: __init__.py  command_palette.py  main_window.py
tarot_canvas/ui/canvas/: __init__.py  alignment.py  animations.py  card_item.py  commands.py  icons.py  view.py
tarot_canvas/ui/components/: card_explorer.py
tarot_canvas/ui/tabs/: base_tab.py  canvas_tab.py  card_view_tab.py  deck_view_tab.py  library_tab.py
tarot_canvas/ui/tabs/card_view/: card_preview.py  color_dot.py  deck_switcher.py  esoterica_tab.py  markdown_editor.py  notes_list.py  notes_tab.py  overview_tab.py
tarot_canvas/ui/widgets/: card_thumbnail.py
tarot_canvas/ui/windows/: log_viewer.py  preferences_dialog.py
tarot_canvas/utils/: logger.py  path_helper.py  theme_manager.py
