[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tarot-canvas"
version = "0.1.0"
description = "A cross-platform Qt6 application for viewing and exploring tarot decks"
authors = ["Adam Fidel <adam@fidel.id>"]
readme = "README.md"
packages = [{include = "tarot_canvas"}]  # This directly uses the tarot_canvas directory at the project root
license = "MIT"
homepage = "https://github.com/arcanaland/tarot-canvas"
repository = "https://github.com/arcanaland/tarot-canvas"
keywords = ["tarot", "qt6", "deck", "cards"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
PyQt6 = "^6.5.0"
toml = "^0.10.2"
requests = "^2.31.0"
xdg-base-dirs = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.scripts]
tarot-canvas = "tarot_canvas.main:main"

# Add metadata for Linux desktop integration
[tool.poetry.plugins."gui_scripts"]
tarot-canvas = "tarot_canvas.main:main"
